<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/permission_icon"
                    android:layout_width="32.0dip"
                    android:layout_height="32.0dip"
                    android:layout_marginTop="56.0dip"
                    android:src="@drawable/ic_oui_security_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/oui_primary_text_color" />

                <TextView
                    android:id="@+id/permission_title"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12.0dip"
                    android:fontFamily="@string/sesl_font_family_regular"
                    android:gravity="center"
                    android:paddingHorizontal="24.0dip"
                    android:text="@string/app_name"
                    android:textColor="@color/oui_primary_text_color"
                    android:textSize="27.0sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/permission_icon" />

                <TextView
                    android:id="@+id/permission_subtitle"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16.0dip"
                    android:fontFamily="@string/sesl_font_family_regular"
                    android:gravity="center"
                    android:paddingHorizontal="24.0dip"
                    android:text="@string/oui_permission_page_description"
                    android:textColor="@color/oui_subheader_text_color"
                    android:textSize="15.0sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/permission_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <dev.oneuiproject.oneui.widget.RoundLinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:orientation="vertical"
                app:roundedCorners="all">

                <com.newagedevs.musicoverlay.view.PermissionCardView
                    android:id="@+id/permission_record_audio_card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:IconDrawable="@drawable/ic_oui_audio_filled"
                    app:SummaryText="@string/oui_app_permission_record_audio_summary"
                    app:TitleText="@string/oui_app_permission_record_audio_title" />

                <com.newagedevs.musicoverlay.view.PermissionCardView
                    android:id="@+id/permission_appear_on_top_card"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:IconDrawable="@drawable/ic_oui_puzzle"
                    app:SummaryText="@string/oui_app_permission_appear_on_top_summary"
                    app:TitleText="@string/oui_app_permission_appear_on_top_title" />

            </dev.oneuiproject.oneui.widget.RoundLinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/permission_footer"
        android:layout_width="fill_parent"
        android:layout_height="72.0dip"
        android:layout_marginHorizontal="18.0dip"
        android:background="?attr/roundedCornerColor"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_main_activity"
            style="@style/OneUI.ButtonStyleColored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:text="Start" />


    </RelativeLayout>
</LinearLayout>